--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -16,13 +16,13 @@
 <ion-content no-bounce id="Treatment-Page">
  
 
-  <h4 id="treatment-heading6" style="color:#006bb6;font-size: x-large;">
+  <h4 id="treatment-heading6" style="color:#006bb6;font-size: x-large;padding-left: 5vw;">
     Routes To tPA Capable Hospitals
   </h4>
   <spinner *ngIf="tpaSpinner" style="height: 30vh;"></spinner> <!--The spinner component which will show until results are returned  -->
 
   <div class="card-scroll" *ngIf="tpashow"> <!--The div that will not be shown until tpashow is set to true -->
-    <p style="background-color: yellow;" text-center>Click on the route option for next steps</p>
+    <p style="color: black;" text-center>Click on the route option for next steps</p>
     <div *ngIf="results"> <!--If there are no results display the message -->
       <br><br>
       <p style="font-size: large;">{{display}}</p>
@@ -35,29 +35,71 @@
     <ion-item *ngFor="let card of cards"> <!--iteratie through all cards  -->
       <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour"> <!--if it is a driving route show the correct icon and call the right display function  -->
         <ion-card-content>
-          <ion-card-title>
-          {{card.name}} <h1><figure><img src= "./assets/Travel/Ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
-          </ion-card-title>
-        <p id="cardinfo" style="color: black;">
-          Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
+          <ion-grid no-padding>
+            <ion-row>
+              <p id="cardinfo" style="font-size: small;color: white;">
+                Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
+            </ion-row>
+            <ion-row >
+              <ion-col col-9 >
+                <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+            </ion-col>
+            <ion-col>
+              <div style="height: 20%;"></div>
+             <img src= "./assets/Travel/Ambulance.png"> 
+            </ion-col>
+            </ion-row>
+            <ion-row>
+              <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
+              <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+            </ion-row>
+          </ion-grid>
         </ion-card-content>
       </ion-card>
       <ion-card *ngIf="card.Helipad" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--if it is a helicoper route show the correct icon and call the complec route function  -->
         <ion-card-content>
-          <ion-card-title>
-          {{card.name}} <h1><figure><img src= "./assets/Travel/Helecopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
-          </ion-card-title>
-        <p id="cardinfo" style="color: black;">
-          Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
+          <ion-grid no-padding>
+            <ion-row>
+              <p id="cardinfo" style="font-size: small;color: white;">
+                Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
+            </ion-row>
+            <ion-row >
+              <ion-col col-9 >
+                <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+            </ion-col>
+            <ion-col>
+              <div style="height: 50%;"></div>
+             <img src= "./assets/Travel/Helecopter.png"> 
+            </ion-col>
+            </ion-row>
+            <ion-row>
+              <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
+              <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+            </ion-row>
+          </ion-grid>
         </ion-card-content>
       </ion-card>
       <ion-card *ngIf="card.Airport" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--if it is an airplane route show the correct icon and call the complex route function -->
         <ion-card-content>
-          <ion-card-title>
-          {{card.name}} <h1> <figure><img src= "./assets/Travel/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
-          </ion-card-title>
-        <p id="cardinfo" style="color: black;">
-          Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
+          <ion-grid no-padding>
+            <ion-row>
+              <p id="cardinfo" style="font-size: small;color: white;">
+                Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
+            </ion-row>
+            <ion-row >
+              <ion-col col-9 >
+                <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+            </ion-col>
+            <ion-col>
+              <div style="height: 35%;"></div>
+             <img src= "./assets/Travel/Airplane.png"> 
+            </ion-col>
+            </ion-row>
+            <ion-row>
+              <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
+              <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+            </ion-row>
+          </ion-grid>
         </ion-card-content>
       </ion-card>
     </ion-item>
@@ -65,42 +107,84 @@
   </ion-scroll>
   </div>
    <!--The end of the tpa section and start of evt section  -->
-<br><br>
-  <h4 id="treatment-heading7" style="color:#006bb6;font-size: x-large;">
+<br>
+  <h4 id="treatment-heading7" style="color:#006bb6;font-size: x-large;padding-left: 5vw;">
     Routes To EVT Capable Hospitals 
   </h4>
   <spinner *ngIf="evtSpinner"></spinner> <!--The spinner which stops after evt routes are returned -->
   <div class="card-scroll" *ngIf="evtshow"> <!--The div which hold the cards and will be shown if it is set to true  -->
-    <p style="background-color: yellow;" text-center>Click on the route option for next steps</p>
+    <p style="color: black;" text-center>Click on the route option for next steps</p>
   <ion-scroll scrollY="true" style="height: 30vh;">
     <div *ngIf="evtEmpty"><br><br><br><p style="font-size: large;">{{message}}</p></div> <!--if this section is empty it will display the message -->
     <ion-list justify-content-center align-items-center>
       <ion-item *ngFor="let card of EvtCards"> <!--goes through all of the evt routes as cards  -->
         <ion-card *ngIf="card.Driving" tappable (click)="goToRoute(card)" text-wrap [style.background-color]="card.colour"> <!--for driving routes to show the right icon and call the nomral route  -->
           <ion-card-content>
-            <ion-card-title>
-            {{card.name}} <h1><figure><img src= "./assets/Travel/Ambulance.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
-            </ion-card-title>
-          <p id="cardinfo" style="color: black;">
-            Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
+            <ion-grid no-padding>
+              <ion-row>
+                <p id="cardinfo" style="font-size: small;color: white;">
+                  Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
+              </ion-row>
+              <ion-row >
+                <ion-col col-9 >
+                  <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+              </ion-col>
+              <ion-col>
+                <div style="height: 50%;"></div>
+               <img src= "./assets/Travel/Ambulance.png"> 
+              </ion-col>
+              </ion-row>
+              <ion-row>
+                <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
+                <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+              </ion-row>
+            </ion-grid>
           </ion-card-content>
         </ion-card>
         <ion-card *ngIf="card.Helipad" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--for helicoper routes to show the right icon and call the complex route function  -->
           <ion-card-content>
-            <ion-card-title>
-            {{card.name}} <h1> <figure><img src= "./assets/Travel/Helecopter.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
-            </ion-card-title>
-          <p id="cardinfo" style="color: black;">
-            Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
+            <ion-grid no-padding>
+              <ion-row>
+                <p id="cardinfo" style="font-size: small;color: white;">
+                  Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
+              </ion-row>
+              <ion-row >
+                <ion-col col-9 >
+                  <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+              </ion-col>
+              <ion-col>
+                <div style="height: 50%;"></div>
+               <img src= "./assets/Travel/Helecopter.png"> 
+              </ion-col>
+              </ion-row>
+              <ion-row>
+                <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
+                <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+              </ion-row>
+            </ion-grid>
           </ion-card-content>
         </ion-card>
         <ion-card *ngIf="card.Airport" tappable (click)="ComplexRoute(card)" text-wrap [style.background-color]="card.colour"> <!--for airplane routes to show the correct icon and call the complex route function  -->
           <ion-card-content>
-            <ion-card-title>
-            {{card.name}} <h1><figure><img src= "./assets/Travel/Airplane.png" style="float:right"><figcaption style="font-size: small;">{{card.DistChar}}</figcaption> </figure></h1>
-            </ion-card-title>
-          <p id="cardinfo" style="color: black;">
-            Patient Pickup to Destination time: {{card.TimeWithMultChar}}  
+            <ion-grid no-padding>
+              <ion-row>
+                <p id="cardinfo" style="font-size: small;color: white;">
+                  Patient Pickup to Destination: <b>{{card.TimeWithMultChar}}</b></p>
+              </ion-row>
+              <ion-row >
+                <ion-col col-9 >
+                  <p style="font-size: larger;color: white;"><b>{{card.name}}</b></p>
+              </ion-col>
+              <ion-col>
+                <div style="height: 50%;"></div>
+               <img src= "./assets/Travel/Airplane.png"> 
+              </ion-col>
+              </ion-row>
+              <ion-row>
+                <p style="font-size: small;color: white;">Fastest Total Time Achieved<br>Call to Definitive care:<br>
+                <span style="font-size: medium;"><b>XX:XX (n=X)</b></span></p>
+              </ion-row>
+            </ion-grid> 
           </ion-card-content>
         </ion-card>
       </ion-item>
