-changed the colour of the icons and text in the side menu -fixed a spelling mistake in the map screens - added a different link for the best practice in the next steps screen - changed the look of the 911 page

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -41,7 +41,7 @@
             <ion-label>Helipad Markers</ion-label>
           </ion-option>
           <ion-option [value]="5">
-            <ion-label>AirPort Markers</ion-label>
+            <ion-label>Airport Markers</ion-label>
             <ion-checkbox></ion-checkbox>
           </ion-option>
           <ion-option [value]="6">
