- added a marker and special zoom to the map if you have already clicked on a town - added the buttons to the 911 page - added a popup and marker if the map is cliked from the 911 page

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -13,5 +13,6 @@
 <ion-content padding style="color: #006bb6;">
   <div id="Destination" text-center></div>
 <div id="Plan" style="height: 60vh; font-size: large;"></div>
- 
+<button ion-button block on-click="GoToMap()" round large>Explore My Area</button>
+<button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
 </ion-content>
