- made some more changes to the map options - added the contact page and made it work

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -6,10 +6,14 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>contact</ion-title>
+    <ion-title>Contact</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+ <h4 text-center style="color:#006bb6;font-size: x-large;">Contact Us</h4>
+ <div class="imgbox" justify-content-center>
+  <img class="center-fit" src= "./assets/contact/ContactIcons.jpg"> 
+</div>
+ 
 </ion-content>
