- added the new spacers to the question options -centered the text of the questions - changed the spacing on the first page

--- a/src/pages/imaging-required/imaging-required.html
+++ b/src/pages/imaging-required/imaging-required.html
@@ -13,8 +13,8 @@
 </ion-header>
 
 <ion-content padding id="imaging-required">
-   
-  <h3 id="imagingRequired-heading3" style="color:#006bb6;font-weight:400;font-size: xx-large;">
+   <!-- <div style="height: 9vh;"></div>-->
+  <h3 id="imagingRequired-heading3" text-center style="color:#006bb6;font-weight:400;font-size: xx-large;">
     Does the patient require imaging?
   </h3>
   <div class="spacer" style="height:100px;" id="imagingRequired-spacer4"></div>
