- changed the titles to be in the center - go back past this commit to undo all of the center text

--- a/src/pages/evt-options/evt-options.html
+++ b/src/pages/evt-options/evt-options.html
@@ -15,7 +15,7 @@
 <ion-content no-bounce id="evt-options">
 
 
-  <h4 id="treatment-heading6" style="color:#006bb6;font-size: x-large;padding-left: 5vw;">
+  <h4 id="treatment-heading6" text-center style="color:#006bb6;font-size: x-large;">
     Routes To EVT Capable Hospitals
   </h4>
   <div *ngIf="evtSpinner" style="height: 60vh;" >
