--- a/src/pages/imaging/imaging.html
+++ b/src/pages/imaging/imaging.html
@@ -16,7 +16,7 @@
 
 <ion-content no-bounce  id="Imaging" >
 
-  <h4 id="treatment-heading6" style="color:#006bb6;font-size: x-large;padding-left: 5vw;"><!--the header for the page with style specified  -->
+  <h4 id="treatment-heading6" text-center style="color:#006bb6;font-size: x-large;"><!--the header for the page with style specified  -->
  
    Routes to Imaging Capable Hospitals
   </h4>
