--- a/src/pages/last-known-well/last-known-well.html
+++ b/src/pages/last-known-well/last-known-well.html
@@ -12,11 +12,11 @@
 </ion-header>
 <ion-content no-bounce padding class="card" style="height: 100vh;" id="page2">
 <div style="height:6vh;"></div>
-  <h3 id="lastKnownWell-heading5" >
+  <h3 text-center id="lastKnownWell-heading5" >
     What time was the patient last known to be well?
   </h3>
     <ion-row>
-    <p (click)="TimeModal()" style="color: black;width:100%;font-size: larger;">More Information</p>
+    <p (click)="TimeModal()" text-center style="color: black;width:100%;font-size: larger;">More Information</p>
     </ion-row>
  
   
