--- a/src/pages/treatment/treatment.html
+++ b/src/pages/treatment/treatment.html
@@ -16,7 +16,7 @@
 <ion-content no-bounce id="Treatment-Page">
  
 
-  <h4 id="treatment-heading6" style="color:#006bb6;font-size: x-large;padding-left: 5vw;">
+  <h4 id="treatment-heading6" text-center style="color:#006bb6;font-size: x-large;">
     Routes To tPA Capable Hospitals
   </h4>
   <spinner *ngIf="tpaSpinner" style="height: 30vh;"></spinner> <!--The spinner component which will show until results are returned  -->
@@ -108,7 +108,7 @@
   </div>
    <!--The end of the tpa section and start of evt section  -->
 <br>
-  <h4 id="treatment-heading7" style="color:#006bb6;font-size: x-large;padding-left: 5vw;">
+  <h4 id="treatment-heading7" text-center style="color:#006bb6;font-size: x-large;">
     Routes To EVT Capable Hospitals 
   </h4>
   <spinner *ngIf="evtSpinner"></spinner> <!--The spinner which stops after evt routes are returned -->
