--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -12,6 +12,7 @@
 
 <ion-content padding>
  <h4 text-center style="color:#006bb6;font-size: x-large;">Contact Us</h4>
+ <h4 text-center style="color:#006bb6;font-size: large;">Northwestern Ontario<br>Regional Stroke Network</h4>
  <div class="imgbox" justify-content-center>
   <img class="center-fit" src= "./assets/contact/ContactIcons.jpg"> 
 </div>
