--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,9 +5,14 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar text-center>
     <ion-title>Contact</ion-title>
   </ion-navbar>
+  <ion-buttons end>
+    <button ion-button icon-only menuToggle right>
+      <ion-icon name='menu'></ion-icon>
+    </button>
+  </ion-buttons>
 </ion-header>
 
 <ion-content padding>
