- fixed the website link

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -17,7 +17,7 @@
   <figure style="text-align:center">
     <img class="center-fit" src= "./assets/contact/Internet.jpg"> 
     <!--<figcaption><p style="text-align:center; color: blue;" (click)="goToSite()"><u>www.nwonavigate.ca</u></p></figcaption> USE FOR IN APP BROWSER -->
-    <figcaption><a href="https://www.nwostroke.ca" ><u>www.nwostroke.ca</u></a></figcaption>
+    <figcaption><a href="https://tbrhsc.net/nwostroke/" ><u>www.nwostroke.ca</u></a></figcaption>
   </figure>
   <br>
   <figure style="text-align:center">
