Changed the page name to match the next steps in the 911 case

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar text-center>
-    <ion-title >Care Instructions</ion-title>
+    <ion-title >Next Steps</ion-title>
     <ion-buttons end>
       <button ion-button icon-only menuToggle right>
         <ion-icon name='menu'></ion-icon>
