- made changes to the timer -made changes to the info screen

--- a/src/pages/lkw-modal/lkw-modal.html
+++ b/src/pages/lkw-modal/lkw-modal.html
@@ -23,7 +23,7 @@
 <ul>
   <li>If the time passed is under four and a half hours the timer will be <span style="color:#008742;">green</span> and the patient will be eligible for both tPA and EVT</li>
   <br>
-  <li>If the time passed is between 4 and a half and 6 hours the timer will be <span style="color: #db811a">orange</span> and the patient will only be eligible for EVT</li>
+  <li>If the time passed is between 4 and a half and 6 hours the timer will be <span style="color: #ecb318">yellow</span> and the patient will only be eligible for EVT</li>
   <br>
   <li>If the time passed is over 6 hours the timer will be <span style="color: #d2232a;">red</span> and the patient will be out of the usual treatment window</li>
 </ul>
