- working with the city page to get the buttons working for call - added home.page.html so the error would stop

--- a/src/pages/city/city.html
+++ b/src/pages/city/city.html
@@ -12,7 +12,19 @@
 
 <ion-content padding style="color: #006bb6;">
   <div id="Destination" text-center></div>
+  <!--
 <div id="Plan" [innerHTML]="planhtml|htmlpipe" style="height: 60vh; font-size: large;"></div>
-<button ion-button block on-click="GoToMap()" round large>Explore My Area</button>
+-->
+<div style="height: 60vh; font-size: large;">
+ 
+<br><br><h4 text-center>Respond immediately</h4><br><br><br><p text-center>
+
+    <a href="tel:+911" center ion-button round  small class="callButton"><button ion-button small>Call</button></a>: 9-1-1 
+  
+  
+  
+  <br><br>OR<br><br> your local emergency number</p>
+</div>
+ <button ion-button block on-click="GoToMap()" round large>Explore My Area</button>
 <button ion-button block on-click="GoToBestPractice()" round large>Patient Care - Best Practice</button>
 </ion-content>
